fix(file-icons): use align-self center instead of vertical-align in flex

--- a/src/layouts/file-icons.css
+++ b/src/layouts/file-icons.css
@@ -18,8 +18,8 @@
   width: 14px;
   height: 14px;
   margin-right: 6px;
-  vertical-align: -2px;
   flex-shrink: 0;
+  align-self: center;
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
